324864346: (fix) [a11Y] change color for field label to fix GAR 1.14 low color contrast (#287)

--- a/modules/ui/src/styles.scss
+++ b/modules/ui/src/styles.scss
@@ -177,6 +177,10 @@ h2.title {
   --mat-option-selected-state-layer-color: #e8f0fe;
 }
 
+.mat-mdc-form-field {
+  --mdc-outlined-text-field-focus-label-text-color: #1a73e8;
+}
+
 body:has(.initiate-test-run-dialog)
   app-root
   app-spinner.connection-settings-spinner,
